# esp32s3_lvgl

./: README.md  sdkconfig  sdkconfig.old  硬件说明.md
main/: CMakeLists.txt  lv_conf.h  main.c
main/ui/: ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp_hook.c
main/ui/function/: function.c  function.h
main/ui/screens/: ui_Screen1.c
